[tool.poetry]
name = "mei_import_tools"
version = "1.0.1"
description = "Tools for importing MEI intervals from GitHub"
authors = [
    "Richard Freedman <your.email@example.com>"
]

[tool.poetry.dependencies]
python = "^3.8"
urllib3 = "^2.0"
certifi = "^2023.11.17"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"